--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
     "isomorphic-unfetch": "^3.0.0",
     "next": "11.1.0",
     "react": "^18.2.0",
-    "react-dom": "16.13.1"
+    "react-dom": "^18.2.0"
   }
 }
